Styling changes Separate auto-gen and regular product page styles Correct auto-gen product page title size Make auto-gen page title alignment editable

--- a/sources/components/custom-styles/template-cs-style-rules.scss
+++ b/sources/components/custom-styles/template-cs-style-rules.scss
@@ -304,15 +304,16 @@ body {
 
 // Product page
 
-.item-page .content-header h1 {
+.product-page .content-header h1 {
   font-size: var(--product-title-size);
   font-weight: var(--product-title-font-weight);
   font-style: var(--product-title-font-style);
   text-decoration: var(--product-title-font-text-decoration);
   color: var(--product-title-color);
+  text-align: var(--product-title-alignment);
 }
 
-.item-page .content-formatted .content-product-description {
+.product-page .content-formatted .content-product-description {
   color: var(--product-description-color);
   font-size: var(--product-description-size);
   font-weight: var(--product-description-font-weight);
@@ -320,7 +321,7 @@ body {
   text-decoration: var(--product-description-font-text-decoration);
 }
 
-.item-page .product-price {
+.product-page .product-price {
   color: var(--product-price-color);
   font-size: var(--product-price-size);
   font-weight: var(--product-price-font-weight);
@@ -531,5 +532,5 @@ body { font-family: var(--font-one);}
   .content-formatted .form_submit input, .content-formatted .custom-btn { font-size: calc(var(--button-font-size) * 1.4);}
   .front-page .menu-main .menu .menu-item .menu-link { font-size: calc(var(--header-mainmenu-font-size) * 1.4);}
   .content-page .header .menu-main .menu .menu-item .menu-link { font-size: calc(var(--header-mainmenu-font-size) * 1.4);}
-  .item-page .content-header h1 { font-size: calc(var(--product-title-size) * 1.4); }
+  .product-page .content-header h1 { font-size: calc(var(--product-title-size) * 1.4); }
 }
